--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -15,3 +15,9 @@ body {
 code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
+
+*,
+*::before,
+*::after {
+	box-sizing: border-box;
+}
