--- a/my-app/src/app.module.css
+++ b/my-app/src/app.module.css
@@ -1,84 +1,59 @@
 .container {
 	text-align: center;
-	max-width: 950px;
 	margin: 0 auto;
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	flex-direction: column;
 	height: 100vh;
+	background-color: #B99674;
 }
 
-.inner-container {
-	width: 370px;
-	height: 584px;
-	background-color: #1C1C1C;
-	border-radius: 40px;
+.form {
+	width: 600px;
+	padding: 30px;
+	border-radius: 30px;
+	background-color: #fff;
+	box-shadow: 0px 1px 38px 0px rgba(34, 60, 80, 0.2);
+}
+
+.field {
 	display: flex;
 	flex-direction: column;
-	justify-content: flex-end;
+	align-items: flex-start;
+	padding-bottom: 30px;
+	position: relative;
 }
 
-.buttons-container {
-	display: grid;
-	grid-template-columns: 274px 80px;
-	padding: 10px;
-	height: 390px;
-	border-top: 1px solid #D9D9D9;
+.label {
+	font-size: 12px;
+	margin-bottom: 10px;
 }
 
-.buttons {
+.input {
 	width: 100%;
-	margin: 0;
-	display: grid;
-	grid-template-columns: repeat(3, 80px);
-	grid-template-rows: repeat(4, 1fr);
-	grid-gap: 7px;
+	min-height: 40px;
+	padding: 10px;
+	border-color: #B99674;
 }
 
-.operators {
-	display: grid;
-	grid-template-rows: repeat(4, 1fr);
-	grid-gap: 7px;
+.error {
+	position: absolute;
+	bottom: 15px;
+	padding-top: 10px;
+	font-size: 12px;
+	color: rgb(237, 19, 19);
 }
 
-.button-num {
-	width: 80px;
-	height: 80px;
-	border-radius: 50%;
-	background-color: #6D6D6D;
-	display: flex;
-	align-items: center;
-	justify-content: center;
+.button {
+	background-color: #B99674;
+	width: 100%;
+	border: 0;
+	padding: 10px;
 	color: #fff;
-	font-size: 40px;
-	cursor: pointer;
-	border: none;
-	transition: background-color .3s;
+	transition: opacity .3s;
 }
 
-.button-num:hover {
-	background-color: #ABA5A5;
-}
-
-
-.button-num--operator {
-	background-color: #FFB800;
-}
-
-.button-num--operator:hover {
-	background-color: #FDD05E;
-}
-
-.output {
-	display: flex;
-	align-items: flex-end;
-	justify-content: flex-end;
-	height: 190px;
-	color: #fff;
-	font-size: 50px;
-	padding: 20px;
-}
-
-.done {
-	color: #FFB800;
+.button[disabled] {
+	opacity: .7;
 }
