--- a/my-app/src/app.module.css
+++ b/my-app/src/app.module.css
@@ -2,83 +2,71 @@
 	text-align: center;
 	max-width: 950px;
 	margin: 0 auto;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	height: 100vh;
-}
-
-.inner-container {
-	width: 370px;
-	height: 584px;
-	background-color: #1C1C1C;
-	border-radius: 40px;
-	display: flex;
-	flex-direction: column;
-	justify-content: flex-end;
 }
 
 .buttons-container {
-	display: grid;
-	grid-template-columns: 274px 80px;
-	padding: 10px;
-	height: 390px;
-	border-top: 1px solid #D9D9D9;
-}
-
-.buttons {
-	width: 100%;
-	margin: 0;
-	display: grid;
-	grid-template-columns: repeat(3, 80px);
-	grid-template-rows: repeat(4, 1fr);
-	grid-gap: 7px;
-}
-
-.operators {
-	display: grid;
-	grid-template-rows: repeat(4, 1fr);
-	grid-gap: 7px;
-}
-
-.button-num {
-	width: 80px;
-	height: 80px;
-	border-radius: 50%;
-	background-color: #6D6D6D;
 	display: flex;
-	align-items: center;
 	justify-content: center;
-	color: #fff;
-	font-size: 40px;
-	cursor: pointer;
+	gap: 10px;
+}
+
+.button {
+	padding: 0.5em 0.75em;
+	background-color: hsl(var(--accent-color-hue), var(--accent-color-saturation), 92%);
+	font-size: 18px;
 	border: none;
-	transition: background-color .3s;
+	transition: background-color 0.15s ease;
 }
 
-.button-num:hover {
-	background-color: #ABA5A5;
+.button:hover {
+	background-color: hsl(var(--accent-color-hue), var(--accent-color-saturation), 87%);
 }
 
-
-.button-num--operator {
-	background-color: #FFB800;
+.button:disabled {
+	background-color: var(--disabled-color);
 }
 
-.button-num--operator:hover {
-	background-color: #FDD05E;
+.steps-content {
+	margin-bottom: 30px;
+	min-height: 100px;
+	border: 2px solid hsl(var(--accent-color-hue), var(--accent-color-saturation), 92%);
+	border-radius: 15px;
+	padding: 15px 20px;
 }
 
-.output {
+.steps-list {
+	list-style: none;
+	margin: 0;
+	margin-bottom: 30px;
+	padding: 0;
 	display: flex;
-	align-items: flex-end;
-	justify-content: flex-end;
-	height: 190px;
-	color: #fff;
-	font-size: 50px;
-	padding: 20px;
+	justify-content: space-between;
+	gap: 15px;
 }
 
-.done {
-	color: #FFB800;
+.steps-item {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	flex: 1 1 0px;
+	font-size: 0.75rem;
+}
+
+.steps-item-button {
+	cursor: pointer;
+	border-radius: 50%;
+	padding: 0.75rem 1rem;
+	background: #cccccc;
+	border: none;
+	margin-bottom: 0.25rem;
+}
+
+.steps-item.active .steps-item-button,
+.steps-item.done .steps-item-button {
+	background: hsl(var(--accent-color-hue), var(--accent-color-saturation), 92%);
+}
+
+.steps-item.active,
+.steps-item.active .steps-item-button {
+	font-weight: bold;
 }
