--- a/my-app/src/app.module.css
+++ b/my-app/src/app.module.css
@@ -1,9 +1,60 @@
 .container {
 	text-align: center;
-	max-width: 950px;
 	margin: 0 auto;
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	flex-direction: column;
 	height: 100vh;
+	background-color: #B99674;
+}
+
+.form {
+	width: 600px;
+	padding: 30px;
+	border-radius: 30px;
+	background-color: #fff;
+	box-shadow: 0px 1px 38px 0px rgba(34, 60, 80, 0.2);
+}
+
+.field {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	padding-bottom: 30px;
+	position: relative;
+}
+
+.label {
+	font-size: 12px;
+	margin-bottom: 10px;
+}
+
+.input {
+	width: 100%;
+	min-height: 40px;
+	padding: 10px;
+	border-color: #B99674;
+}
+
+.error {
+	position: absolute;
+	bottom: 15px;
+	padding-top: 10px;
+	font-size: 12px;
+	color: rgb(237, 19, 19);
+}
+
+.button {
+	background-color: #B99674;
+	width: 100%;
+	border: 0;
+	padding: 10px;
+	color: #fff;
+	transition: opacity .3s;
+	cursor: pointer;
+}
+
+.button[disabled] {
+	opacity: .7;
 }
