--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -2,6 +2,7 @@
 	--accent-color-hue: 236;
 	--accent-color-saturation: 100%;
 	--disabled-color: #cfcfcf;
+	--blue-main: rgb(20, 118, 148)
 }
 
 body {
