--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -22,3 +22,25 @@ code {
 *::after {
 	box-sizing: border-box;
 }
+
+.fl {
+	display: flex;
+}
+
+.button {
+	background: var(--blue-main);
+	color: #fff;
+	padding: 10px 20px;
+	border: none;
+	font-size: 18px;
+	cursor: pointer;
+}
+
+.button[disabled] {
+	opacity: .7;
+	cursor: not-allowed;
+}
+
+.button:hover {
+	opacity: .7;
+}
