--- a/my-app/src/components/todoItem/todoItem.module.css
+++ b/my-app/src/components/todoItem/todoItem.module.css
@@ -43,3 +43,12 @@
 .icon-wrapper:hover {
     opacity: .5;
 }
+
+.input {
+    border: 1px solid #fff;
+    padding: 5px;
+    background: none;
+    color: #fff;
+    font-size: 16px;
+    width: 70%;
+}
